--- a/app/src/main/res/layout/activity_explore.xml
+++ b/app/src/main/res/layout/activity_explore.xml
@@ -7,6 +7,21 @@
     android:orientation="vertical"
     android:id="@+id/activity_explore">
 
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/snapToPlace"
+            android:textAlignment="center"
+            android:padding="16dp"
+            android:textSize="16sp"
+            android:fontFamily="sans-serif" />
+
+    </android.support.v7.widget.CardView>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/fieldsList"
         android:layout_width="match_parent"
