Added framework to location prompt explainer
Added framework that shows a exlanation to location request when location permission is not allowed

--- a/app/src/main/res/layout/activity_explore.xml
+++ b/app/src/main/res/layout/activity_explore.xml
@@ -15,4 +15,19 @@
         android:layout_height="match_parent"
         android:clipToPadding="false" />
 
+
+
+    <TextView
+        android:id="@+id/emptyText2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="@string/empty_text"
+        android:gravity="center"
+        android:drawable="@drawable/ic_satellite_black_24dp" />
+
+
+
+
 </LinearLayout>
+
+
