--- a/app/src/main/res/layout/activity_explore.xml
+++ b/app/src/main/res/layout/activity_explore.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.fields.curiumx.fields.ExploreActivity"
     android:orientation="vertical"
     android:id="@+id/activity_explore">
@@ -18,12 +19,13 @@
 
 
     <TextView
-        android:id="@+id/emptyText2"
+        android:id="@+id/emptyText"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/empty_text"
         android:gravity="center"
-        android:drawable="@drawable/ic_satellite_black_24dp" />
+        android:visibility="gone"/>
+
 
 
 
