--- a/app/src/main/res/layout/activity_explore.xml
+++ b/app/src/main/res/layout/activity_explore.xml
@@ -10,7 +10,7 @@
 
 
 
-    <android.support.v7.widget.RecyclerView
+<com.fields.curiumx.fields.EmptyRecyclerView
         android:id="@+id/fieldsList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -24,7 +24,7 @@
         android:layout_height="match_parent"
         android:text="@string/empty_text"
         android:gravity="center"
-        android:visibility="gone"/>
+        />
 
 
 
