--- a/app/src/main/res/layout/item_place_picker.xml
+++ b/app/src/main/res/layout/item_place_picker.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:minHeight="64dp"
-    android:background="?android:attr/selectableItemBackground"
-    android:padding="16dp">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    app:cardCornerRadius="4dp"
+    android:minHeight="100dp"
+    app:cardBackgroundColor="@color/Background_Fields"
+    android:layout_margin="4dp">
 
     <TextView
         android:id="@+id/placePickerItemName"
@@ -17,35 +20,26 @@
         android:layout_alignParentStart="true"
         android:textSize="16sp"
         android:ellipsize="end"
-        android:maxLines="1" />
-    <TextView
-        android:id="@+id/placePickerItemAddress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/placePickerItemName"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:ellipsize="end"
-        android:maxLines="1" />
-    <TextView
-        android:id="@+id/placePickerItemRating"
-        android:layout_height="match_parent"
-        android:layout_width="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_alignParentEnd="true"
-        android:textStyle="bold"
-        android:textSize="14sp"
-        android:padding="8dp"
-        android:textColor="@color/FieldsMenuItemNotSelected"
-        android:elevation="1dp" />
-    <TextView
-        android:id="@+id/placePickerItemDistance"
-        android:layout_height="match_parent"
-        android:layout_width="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_toStartOf="@id/placePickerItemRating"
-        android:layout_marginEnd="16dp"
-        android:textSize="12sp" />
+        android:maxLines="1"
+        />
     
 
-</RelativeLayout>
+    <TextView
+        android:id="@+id/placePickerItemDistance"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="16dp"
+        android:textSize="12sp"
+        android:layout_gravity="end"
+        />
+
+    <ImageView
+        android:layout_width="50dp"
+        android:layout_height="70dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/field_photo3"
+android:visibility="gone"        />
+
+
+</android.support.v7.widget.CardView>
