--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#ff4081</color>
     <color name="colorPrimaryFields">#3cff80</color>
     <color name="colorStatusBarFields">#62ed8d</color>
-    <color name="Background_Fields">#f3f8ee</color>
+    <color name="Background_Fields">#f6f9f3</color>
     <color name="FieldsBottomBarColor">#fdfffa</color>
     <color name="FieldsMenuItemNotSelected">#525051</color>
 
