--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -58,6 +58,7 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:background="@drawable/button_custom" />
+        android:background="@drawable/button_custom"
+        android:onClick="onProfileClick"/>
 </LinearLayout>
 </android.support.constraint.ConstraintLayout>
