--- a/app/src/main/res/layout/activity_explore.xml
+++ b/app/src/main/res/layout/activity_explore.xml
@@ -13,19 +13,15 @@
         android:id="@+id/fieldsList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:clipToPadding="true"
-
-        />
-
-
+        android:clipToPadding="true" />
 
     <TextView
         android:id="@+id/emptyText"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/empty_text"
-        android:gravity="center"
-        />
+        android:gravity="center" />
+
 
 
 
