--- a/app/src/main/res/layout/item_place_picker.xml
+++ b/app/src/main/res/layout/item_place_picker.xml
@@ -39,7 +39,14 @@
         android:layout_height="70dp"
         android:scaleType="fitXY"
         android:src="@drawable/field_photo3"
-android:visibility="gone"        />
+android:visibility="gone"
+        />
+
+    <TextView
+        android:id="@+id/fieldID"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
 
 
 </android.support.v7.widget.CardView>
