--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -20,7 +20,7 @@
 
 
 
-    <style name="FieldsTheme" parent="Theme.AppCompat.DayNight">
+    <style name="FieldsTheme" parent="android:Theme.Material.Light">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
