--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,17 +23,17 @@
         android:inputType="textPassword"
         app:layout_constraintTop_toBottomOf="@id/emailSignIn"/>
 
-<Button
-    android:id="@+id/signInButton"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="Sign In"
-    app:layout_constraintTop_toBottomOf="@id/passwordSignIn"
-    android:layout_marginStart="10dp"
-    android:layout_marginEnd="10dp"
-    android:backgroundTint="@color/colorPrimary"
+    <Button
+        android:id="@+id/signInButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:backgroundTint="@color/colorPrimary"
 
-    />
+        android:text="Sign In"
+        app:layout_constraintBottom_toTopOf="@+id/or"
+        app:layout_constraintTop_toBottomOf="@+id/passwordSignIn"
+        tools:layout_editor_absoluteX="30dp" />
 
     <TextView
         android:text="Don't have account yet? Sign Up"
