Good working sign in flow with useless WelcomeActivity
It was nice to know yoy WelcomeActivity.. bye

--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -5,7 +5,7 @@
     android:id="@+id/login_activity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.fields.curiumx.fields.LoginActivity">
+    tools:context="com.fields.curiumx.fields.SignInActivity">
 
     <EditText
         android:id="@+id/emailSignIn"
