--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -5,7 +5,7 @@
     android:id="@+id/base_activity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.fields.curiumx.fields.BaseActivity">
+    tools:context="com.fields.curiumx.fields.FeedActivity">
 
 
     <FrameLayout
@@ -20,6 +20,12 @@
         app:layout_constraintVertical_bias="0.0">
 
     </FrameLayout>
+
+    <TextView
+        android:id="@+id/nameTest"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"/>
 
 <LinearLayout
         android:layout_width="match_parent"
