--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -8,36 +8,40 @@
     android:id="@+id/signUpActivity">
 
     <EditText
+        android:id="@+id/username"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Username"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+
+    <EditText
         android:id="@+id/emailSignUp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Email"
-        app:layout_constraintTop_toTopOf="parent"
+        android:hint="@string/email"
+        app:layout_constraintTop_toBottomOf="@id/username"
         android:inputType="textEmailAddress"/>
 
     <EditText
         android:id="@+id/passwordSignUp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Password"
+        android:hint="@string/password"
         app:layout_constraintTop_toBottomOf="@id/emailSignUp"
-        android:inputType="textPassword"
-        />
+        android:inputType="textPassword"/>
 
     <Button
         android:id="@+id/signUpButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
         android:backgroundTint="@color/colorPrimary"
-        android:text="Sign Up"
+        android:text="@string/sign_up"
         app:layout_constraintBottom_toTopOf="@id/or"
         app:layout_constraintTop_toBottomOf="@id/passwordSignUp"
+        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
-
-
-
         tools:layout_editor_absoluteX="10dp" />
 
     <com.google.android.gms.common.SignInButton
@@ -47,8 +51,7 @@
         android:layout_margin="10dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/or"
-        />
+        app:layout_constraintTop_toBottomOf="@id/or"/>
 
 
     <TextView
