Good working version with database
Able to set current field and kind of see it in profile.

--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -30,6 +30,8 @@
         <item name="android:colorAccent">@color/FieldsMenuItemNotSelected</item>
         <item name="android:colorBackground">@color/Background_Fields</item>
 
+        <item name="android:windowContentTransitions">true</item>
+
 
     </style>
 
