--- a/app/src/main/res/layout/activity_feed.xml
+++ b/app/src/main/res/layout/activity_feed.xml
@@ -25,9 +25,13 @@
         android:id="@+id/nameTest"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        android:textSize="30sp"
+        />
 
 <LinearLayout
+    android:id="@+id/activityBar"
+    android:transitionName="bar"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:visibility="visible"
@@ -44,7 +48,7 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:background="@drawable/button_custom"
+        android:background="@color/cardview_light_background"
         android:onClick="onFeedClick"
 
         android:src="@drawable/home_icon" />
@@ -68,9 +72,11 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:background="@drawable/button_custom"
+        android:background="@color/cardview_light_background"
         android:onClick="onProfileClick"
         android:src="@drawable/person_icon" />
+
+
 
 
 </LinearLayout>
