--- a/app/src/main/res/layout/activity_field_detail.xml
+++ b/app/src/main/res/layout/activity_field_detail.xml
@@ -16,6 +16,7 @@
         android:layout_height="wrap_content" />
 
     <ImageButton
+        android:id="@+id/imTrainingHereButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:src="@drawable/location_icon"
