--- a/app/src/main/res/layout/activity_field_detail.xml
+++ b/app/src/main/res/layout/activity_field_detail.xml
@@ -25,6 +25,19 @@
         android:background="@color/colorPrimary"
 
         />
+    <Button
+        android:id="@+id/imTrainingHereNoMoreButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@id/imTrainingHereButton"
+        android:text="I'm here no more"/>
+
+    <TextView
+        android:id="@+id/amountOfPeople"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@id/imTrainingHereNoMoreButton"
+        />
 
 </android.support.constraint.ConstraintLayout>
 
