--- a/app/src/main/res/layout/activity_feed.xml
+++ b/app/src/main/res/layout/activity_feed.xml
@@ -103,6 +103,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@id/logoutButton"
+
         />
 
     <ImageView
@@ -110,5 +111,25 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         />
+
+
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardBackgroundColor="@color/FSQBanana"
+        app:cardElevation="10dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_margin="5dp"
+        app:cardCornerRadius="5dp"
+        >
+
+        <TextView
+            android:id="@+id/team"
+            android:layout_width="match_parent"
+            android:layout_height="90dp"
+            android:text="team"
+            android:textAlignment="center"
+            />
+    </android.support.v7.widget.CardView>
 
 </android.support.constraint.ConstraintLayout>
