Verison with working timestamping and current filed retrieving

--- a/app/src/main/res/layout/activity_detail_team.xml
+++ b/app/src/main/res/layout/activity_detail_team.xml
@@ -6,24 +6,54 @@
     android:layout_height="match_parent"
     tools:context="com.fields.curiumx.fields.DetailTeamActivity">
 
-    <TextView
-        android:id="@+id/teamName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/teamImage"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        android:src="@drawable/field_photo3"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/teamCountry"
-        android:layout_width="match_parent"
+        android:id="@+id/teamName"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/teamName"/>
+        android:layout_marginTop="12dp"
+        android:layout_marginStart="20dp"
+android:text="teset"
+        android:textAppearance="@android:style/TextAppearance.Material.Medium"
+        android:textSize="30sp"
+        android:textStyle="bold"
+
+        app:layout_constraintLeft_toRightOf="@id/teamImage"
+
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_gravity="center_vertical"
+        android:background="@color/DividerColor"
+        tools:layout_editor_absoluteY="104dp" />
+
+
     <Button
         android:id="@+id/join"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="75dp"
+        android:layout_height="39dp"
+android:visibility="visible"
+        app:layout_constraintTop_toBottomOf="@id/teamName"
+android:layout_marginStart="20dp"
+        android:layout_marginRight="208dp"
+        android:backgroundTint="@color/colorPrimary"
         android:text="join"
-        app:layout_constraintBottom_toBottomOf="parent"
-        />
+        app:layout_constraintLeft_toRightOf="@id/teamImage"
+        tools:layout_editor_absoluteY="53dp" />
+
+
+
 
 </android.support.constraint.ConstraintLayout>
