--- a/app/src/main/res/layout/activity_detail_team.xml
+++ b/app/src/main/res/layout/activity_detail_team.xml
@@ -44,7 +44,7 @@ android:text="teset"
         android:id="@+id/join"
         android:layout_width="75dp"
         android:layout_height="39dp"
-android:visibility="visible"
+android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@id/teamName"
 android:layout_marginStart="20dp"
         android:layout_marginRight="208dp"
