--- a/app/src/main/res/layout/activity_feed.xml
+++ b/app/src/main/res/layout/activity_feed.xml
@@ -98,13 +98,8 @@
 
     </Button>
 
-    <TextView
-        android:id="@+id/username"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/logoutButton"
 
-        />
+
 
     <ImageView
         android:id="@+id/profilePic"
@@ -114,10 +109,11 @@
 
 
     <android.support.v7.widget.CardView
+        android:id="@+id/teamCard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/FSQBanana"
-        app:cardElevation="10dp"
+        app:cardBackgroundColor="@color/cardview_light_background"
+        app:cardElevation="2dp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_margin="5dp"
         app:cardCornerRadius="5dp"
@@ -126,10 +122,33 @@
         <TextView
             android:id="@+id/team"
             android:layout_width="match_parent"
-            android:layout_height="90dp"
+            android:layout_height="match_parent"
             android:text="team"
-            android:textAlignment="center"
+            android:textStyle="bold"
+            android:textAppearance="@android:style/TextAppearance.Material.Medium"
+            android:layout_margin="10dp"/>
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/cardview_light_background"
+        app:cardElevation="2dp"
+        android:layout_margin="5dp"
+        app:layout_constraintTop_toBottomOf="@id/teamCard"
+        app:cardCornerRadius="5dp"
+        >
+
+        <TextView
+            android:id="@+id/search"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/search_hint"
+            android:textStyle="bold"
+            android:textAppearance="@android:style/TextAppearance.Material.Medium"
+            android:layout_margin="10dp"
             />
+
     </android.support.v7.widget.CardView>
 
 </android.support.constraint.ConstraintLayout>
