--- a/app/src/main/res/layout/activity_field_detail.xml
+++ b/app/src/main/res/layout/activity_field_detail.xml
@@ -5,10 +5,28 @@
     android:layout_height="match_parent"
     android:layout_width="match_parent">
 
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/FieldImage"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        android:src="@drawable/field_photo3"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+
     <TextView
         android:id="@+id/fieldName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="12dp"
+        android:textAppearance="@android:style/TextAppearance.Material.Medium"
+        app:layout_constraintLeft_toRightOf="@id/FieldImage"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        app:layout_constraintTop_toTopOf="parent"
         />
 
     <TextView
@@ -24,22 +42,45 @@
         app:layout_constraintBottom_toBottomOf="parent"
         style="?android:attr/borderlessButtonStyle"
         android:background="@color/colorPrimary"
+        android:visibility="gone"
+        />
+
+    <ImageButton
+        android:id="@+id/imTrainingHereNoMoreButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/cross"
+        style="?android:attr/borderlessButtonStyle"
+        android:background="@color/colorPrimary"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="gone"
 
         />
 
     <TextView
         android:id="@+id/amountOfPeople"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="18dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/imTrainingHereButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textStyle="bold"
+        android:textSize="18sp"
+        android:textAppearance="@android:style/TextAppearance.Material.Medium"
+       app:layout_constraintTop_toBottomOf="@id/fieldName"
+        app:layout_constraintLeft_toRightOf="@id/FieldImage"
+        android:visibility="gone"
+        />
 
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
 
 
